add descriptive comments

--- a/02_marketing-brochure-generator/brochure-generator.ipynb
+++ b/02_marketing-brochure-generator/brochure-generator.ipynb
@@ -670,18 +670,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "85a5b6e2-e7ef-44a9-bc7f-59ede71037b5",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_all_details(url):\n",
     "    result = \"Landing page:\\n\"\n",
-    "    result += Website(url).get_contents()\n",
-    "    links = get_links(url)\n",
+    "    result += Website(url).get_contents()  # get main page contents\n",
+    "    links = get_links(url)  # model call to get relevant links on page\n",
     "    print(\"Found links:\", links)\n",
+    "    # iterate through relevant links\n",
     "    for link in links[\"links\"]:\n",
     "        result += f\"\\n\\n{link['type']}\\n\"\n",
+    "        # use the same Website class to get contents, append to result\n",
     "        result += Website(link[\"url\"]).get_contents()\n",
     "    return result"
    ]
@@ -2705,6 +2707,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# use the results gathered to create a brochure\n",
     "system_prompt = \"You are an assistant that analyzes the contents of several relevant pages from a company website \\\n",
     "and creates a short brochure about the company for prospective customers, investors and recruits. Respond in markdown.\\\n",
     "Include details of company culture, customers and careers/jobs if you have the information.\"\n",
@@ -2761,7 +2764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "e44de579-4a1a-4e6a-a510-20ea3e4b8d46",
    "metadata": {},
    "outputs": [],
@@ -2771,6 +2774,7 @@
     "        model=MODEL,\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": system_prompt},\n",
+    "            # second LLM call to fetch contents via get_all_details()\n",
     "            {\"role\": \"user\", \"content\": get_brochure_user_prompt(company_name, url)}\n",
     "          ],\n",
     "    )\n",
@@ -2885,7 +2889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "51db0e49-f261-4137-aabe-92dd601f7725",
    "metadata": {},
    "outputs": [],
@@ -2902,6 +2906,7 @@
     "    \n",
     "    response = \"\"\n",
     "    display_handle = display(Markdown(\"\"), display_id=True)\n",
+    "    # add streaming interface\n",
     "    for chunk in stream:\n",
     "        response += chunk.choices[0].delta.content or ''\n",
     "        response = response.replace(\"```\",\"\").replace(\"markdown\", \"\")\n",
