add inputbox for the question input

--- a/03_LLM-Tutor/llm-tutor.ipynb
+++ b/03_LLM-Tutor/llm-tutor.ipynb
@@ -71,15 +71,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "52e31ed0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "question = \"\"\"\n",
-    "Please explain what this code does and why:\n",
-    "yield from {book.get(\"author\") for book in books if book.get(\"author\")}\n",
-    "\"\"\""
+    "# example question:\n",
+    "# Please explain what this code does and why:\n",
+    "# yield from {book.get(\"author\") for book in books if book.get(\"author\")}\n",
+    "question = input(\"Please enter your question:\")"
    ]
   },
   {
