--- a/04_The-LLM-Debates/the-llm-debates.ipynb
+++ b/04_The-LLM-Debates/the-llm-debates.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "075050a2",
    "metadata": {},
    "outputs": [],
@@ -27,13 +27,12 @@
     "from dotenv import load_dotenv\n",
     "from IPython.display import Markdown, display, update_display\n",
     "from openai import OpenAI\n",
-    "import ollama\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "943fafcc",
    "metadata": {},
    "outputs": [],
@@ -45,12 +44,12 @@
     "# Load environment variables\n",
     "load_dotenv(dotenv_path=env_path, override=True)\n",
     "\n",
-    "openai = OpenAI()\n",
+    "\n",
     "OPENAI_API_KEY = os.getenv('OPENAI_API_KEY')\n",
     "MODEL_GPT = 'gpt-4o-mini'\n",
     "\n",
     "# Initialize OpenAI client with API key\n",
-    "CLIENT = OpenAI(api_key=OPENAI_API_KEY)"
+    "openai = OpenAI(api_key=OPENAI_API_KEY)"
    ]
   },
   {
@@ -77,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "c2611a2c",
    "metadata": {},
    "outputs": [],
@@ -104,6 +103,7 @@
     "    Base responses on the book \"Mindset\".\n",
     "    Keep responses concise. (3 sentences max.)\"\"\"\n",
     "\n",
+    "# placeholder starter messages\n",
     "messages_peterson = [\"Hi! Today's topic for discussion is 'How to raise happy children?'\"]\n",
     "messages_gabor = [\"That's a profound question.\"]\n",
     "messages_dweck = [\"Let's explore this important topic.\"]"
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "df4a7104",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
     "# Conversation setup\n",
     "def call_llm(model, system_prompt, messages):\n",
     "    \"\"\"\n",
-    "    Call a LMM model using OpenAI client.\n",
+    "    Generic function to call an LMM using OpenAI client.\n",
     "\n",
     "    Args:\n",
     "        model (str): The model name (e.g., \"gpt-4o-mini\", \"llama3.2\").\n",
