streamline stream functions

--- a/02_marketing-brochure-generator/brochure-generator.ipynb
+++ b/02_marketing-brochure-generator/brochure-generator.ipynb
@@ -3476,33 +3476,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "dac7cdcf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def stream_gpt(company_name, url):\n",
+    "def stream_brochure_generator(company_name, url, client, model_name):\n",
+    "    \"\"\"\n",
+    "    Unified function to stream brochure generation using either OpenAI or Anthropic client.\n",
+    "    \n",
+    "    Args:\n",
+    "        company_name: Name of the company\n",
+    "        url: Company website URL\n",
+    "        client: Either openai or anthropic client instance\n",
+    "        model_name: Model name to use (e.g., 'gpt-4o-mini' or 'claude-sonnet-4-5-20250929')\n",
+    "    \n",
+    "    Yields:\n",
+    "        Streaming text chunks as they are generated\n",
+    "    \"\"\"\n",
     "    messages = [\n",
     "        {\"role\": \"system\", \"content\": system_prompt},\n",
     "        {\"role\": \"user\", \"content\": get_brochure_user_prompt(company_name, url)}\n",
-    "      ]\n",
-    "    stream = openai.chat.completions.create(\n",
-    "        model='gpt-4.1-mini',\n",
-    "        messages=messages,\n",
-    "        stream=True\n",
-    "    )\n",
-    "    result = \"\"\n",
-    "    for chunk in stream:\n",
-    "        result += chunk.choices[0].delta.content or \"\"\n",
-    "        yield result\n",
-    "\n",
-    "def stream_claude(company_name, url):\n",
-    "    messages = [\n",
-    "        {\"role\": \"system\", \"content\": system_prompt},\n",
-    "        {\"role\": \"user\", \"content\": get_brochure_user_prompt(company_name, url)}\n",
-    "      ]\n",
-    "    stream = anthropic.chat.completions.create(\n",
-    "        model='claude-sonnet-4-5-20250929',\n",
+    "    ]\n",
+    "    stream = client.chat.completions.create(\n",
+    "        model=model_name,\n",
     "        messages=messages,\n",
     "        stream=True\n",
     "    )\n",
@@ -3514,7 +3511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "2598296f",
    "metadata": {},
    "outputs": [],
@@ -3522,9 +3519,9 @@
     "def stream_brochure(company_name, url, model):\n",
     "    yield \"\"\n",
     "    if model==\"GPT\":\n",
-    "        result = stream_gpt(company_name, url)\n",
+    "        result = stream_brochure_generator(company_name, url, openai, 'gpt-4o-mini')\n",
     "    elif model==\"Claude\":\n",
-    "        result = stream_claude(company_name, url)\n",
+    "        result = stream_brochure_generator(company_name, url, anthropic, 'claude-sonnet-4-5-20250929')\n",
     "    else:\n",
     "        raise ValueError(\"Unknown model\")\n",
     "    yield from result"
@@ -3532,7 +3529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "cca648b3",
    "metadata": {},
    "outputs": [
@@ -3540,14 +3537,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7876\n",
+      "* Running on local URL:  http://127.0.0.1:7877\n",
       "* To create a public link, set `share=True` in `launch()`.\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7876/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7877/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -3560,7 +3557,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3568,7 +3565,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found links: {'links': [{'type': 'about page', 'url': 'https://huggingface.co/huggingface'}, {'type': 'careers page', 'url': 'https://apply.workable.com/huggingface/'}, {'type': 'enterprise page', 'url': 'https://huggingface.co/enterprise'}, {'type': 'pricing page', 'url': 'https://huggingface.co/pricing'}, {'type': 'blog page', 'url': 'https://huggingface.co/blog'}, {'type': 'community page', 'url': 'https://discuss.huggingface.co'}, {'type': 'GitHub page', 'url': 'https://github.com/huggingface'}, {'type': 'Twitter page', 'url': 'https://twitter.com/huggingface'}, {'type': 'LinkedIn page', 'url': 'https://www.linkedin.com/company/huggingface/'}]}\n"
+      "Found links: {'links': [{'type': 'company page', 'url': 'https://huggingface.co/'}, {'type': 'about page', 'url': 'https://huggingface.co/about'}, {'type': 'careers page', 'url': 'https://apply.workable.com/huggingface/'}, {'type': 'blog page', 'url': 'https://huggingface.co/blog'}, {'type': 'community page', 'url': 'https://discuss.huggingface.co'}, {'type': 'GitHub page', 'url': 'https://github.com/huggingface'}, {'type': 'Twitter page', 'url': 'https://twitter.com/huggingface'}, {'type': 'LinkedIn page', 'url': 'https://www.linkedin.com/company/huggingface/'}]}\n"
      ]
     }
    ],
@@ -3591,6 +3588,14 @@
     "    )\n",
     "view.launch()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23694256",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
